--- a/package.json
+++ b/package.json
@@ -2,23 +2,24 @@
   "name": "anticipate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "ask-sdk": "^2.7.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ksuares1/anticipate.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ksuares1/anticipate/issues"
   },
-  "homepage": "https://github.com/ksuares1/anticipate#readme",
-  "keywords": []
+  "homepage": "https://github.com/ksuares1/anticipate#readme"
 }
