Added background color to readygo component

--- a/anticipate_frontend/client/package.json
+++ b/anticipate_frontend/client/package.json
@@ -2,7 +2,7 @@
   "name": "anticipate_frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001" , 
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "sass": "^1.26.3",
     "spectre.css": "^0.5.8"
   },
   "scripts": {
