--- a/anticipate_frontend/package.json
+++ b/anticipate_frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./dist/index.js",
     "heroku-postbuild": "npm run build",
-    "build": "rm -rf dist && babel server --out-dir ./dist --source-maps",
+    "build": "del dist && babel server --out-dir ./dist --source-maps",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "server": "nodemon server.js",
