--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "concurrently": "^5.1.0"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0",
+   
     "nodemon": "^2.0.2"
   }
 }
